--- a/src/commands.html
+++ b/src/commands.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <title>Orbit Commands</title>
+  <title>Desk Commands</title>
 
   <!-- Office.js -->
   <script src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js" type="text/javascript"></script>
