--- a/src/taskpane.html
+++ b/src/taskpane.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Orbit</title>
+  <title>Desk</title>
 
   <!-- Office.js -->
   <script src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js" type="text/javascript"></script>
@@ -109,8 +109,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Orbit</h1>
-    <p>Send this email to Orbit for AI-assisted workflows.</p>
+    <h1>Desk</h1>
+    <p>Send this email to Desk for AI-assisted workflows.</p>
 
     <div class="email-info">
       <label>From</label>
@@ -120,7 +120,7 @@
       <div class="value" id="email-subject">Loading...</div>
     </div>
 
-    <button id="open-btn" disabled>Open in Orbit</button>
+    <button id="open-btn" disabled>Open in Desk</button>
 
     <div id="status" class="status"></div>
   </div>
