--- a/taskpane.html
+++ b/taskpane.html
@@ -16,7 +16,7 @@
 
     body {
       margin: 0;
-      padding: 20px;
+      padding: 16px;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, sans-serif;
       font-size: 14px;
       color: #333;
@@ -29,35 +29,44 @@
     }
 
     h1 {
-      font-size: 20px;
+      font-size: 18px;
+      margin: 0 0 16px 0;
+      color: #1a1a1a;
+    }
+
+    h2 {
+      font-size: 14px;
       margin: 0 0 8px 0;
       color: #1a1a1a;
     }
 
     p {
-      margin: 0 0 20px 0;
+      margin: 0 0 12px 0;
       color: #666;
+      font-size: 13px;
     }
 
-    .email-info {
+    .section {
       background: white;
       border-radius: 8px;
       padding: 16px;
-      margin-bottom: 20px;
+      margin-bottom: 16px;
       box-shadow: 0 1px 3px rgba(0,0,0,0.1);
     }
 
     .email-info label {
       display: block;
-      font-size: 12px;
+      font-size: 11px;
       color: #888;
-      margin-bottom: 4px;
+      margin-bottom: 2px;
+      text-transform: uppercase;
     }
 
     .email-info .value {
       font-weight: 500;
       margin-bottom: 12px;
       word-break: break-word;
+      font-size: 13px;
     }
 
     .email-info .value:last-child {
@@ -66,13 +75,13 @@
 
     button {
       width: 100%;
-      padding: 12px 20px;
-      font-size: 14px;
+      padding: 10px 16px;
+      font-size: 13px;
       font-weight: 500;
       color: white;
       background: #0066cc;
       border: none;
-      border-radius: 8px;
+      border-radius: 6px;
       cursor: pointer;
       transition: background 0.2s;
     }
@@ -86,11 +95,46 @@
       cursor: not-allowed;
     }
 
-    .status {
-      margin-top: 12px;
-      padding: 8px 12px;
-      border-radius: 4px;
+    button.secondary {
+      background: #f0f0f0;
+      color: #333;
+    }
+
+    button.secondary:hover {
+      background: #e0e0e0;
+    }
+
+    textarea {
+      width: 100%;
+      min-height: 120px;
+      padding: 10px;
+      font-family: inherit;
       font-size: 13px;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      resize: vertical;
+      margin-bottom: 12px;
+    }
+
+    textarea:focus {
+      outline: none;
+      border-color: #0066cc;
+    }
+
+    .button-group {
+      display: flex;
+      gap: 8px;
+    }
+
+    .button-group button {
+      flex: 1;
+    }
+
+    .status {
+      margin-top: 8px;
+      padding: 8px 10px;
+      border-radius: 4px;
+      font-size: 12px;
       display: none;
     }
 
@@ -105,24 +149,54 @@
       background: #fce8e6;
       color: #c5221f;
     }
+
+    .divider {
+      height: 1px;
+      background: #e0e0e0;
+      margin: 16px 0;
+    }
+
+    .hint {
+      font-size: 11px;
+      color: #888;
+      margin-top: 8px;
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Desk</h1>
-    <p>Send this email to Desk for AI-assisted workflows.</p>
 
-    <div class="email-info">
-      <label>From</label>
-      <div class="value" id="email-from">Loading...</div>
+    <!-- Open in Desk section -->
+    <div class="section">
+      <h2>Send to Desk</h2>
+      <div class="email-info">
+        <label>From</label>
+        <div class="value" id="email-from">Loading...</div>
 
-      <label>Subject</label>
-      <div class="value" id="email-subject">Loading...</div>
+        <label>Subject</label>
+        <div class="value" id="email-subject">Loading...</div>
+      </div>
+
+      <button id="open-btn" disabled>Open in Desk</button>
+      <div id="open-status" class="status"></div>
     </div>
 
-    <button id="open-btn" disabled>Open in Desk</button>
+    <!-- Insert Reply section -->
+    <div class="section">
+      <h2>Insert Reply from Desk</h2>
+      <p>Paste your AI-drafted reply below, then insert it as a threaded reply.</p>
 
-    <div id="status" class="status"></div>
+      <textarea id="draft-input" placeholder="Paste your draft here (Cmd+V or Ctrl+V)..."></textarea>
+
+      <div class="button-group">
+        <button id="reply-btn" class="secondary">Reply</button>
+        <button id="reply-all-btn" class="secondary">Reply All</button>
+      </div>
+
+      <div id="reply-status" class="status"></div>
+      <p class="hint">The draft will open in Outlook's reply form with proper email threading.</p>
+    </div>
   </div>
 
   <script src="taskpane.js"></script>
